# png-util

./: Cargo.toml  README.md
src/: builder.rs  chunk_crc.rs  chunk_header.rs  chunk_info.rs  consts.rs  iter.rs  lib.rs
src/chunk/: crc.rs  header.rs  info.rs  mod.rs  refs.rs  traits.rs  ty.rs
src/chunk/ty/: consts.rs  mod.rs
src/chunk/ty/critical/: ihdr.rs  mod.rs
