[package]
name = "png-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buffer-reader = { git = "https://github.com/Nordgaren/buffer-reader.git" }
bytemuck = {  version = "1.14.3", features = ["derive"] }
